--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="jgoodies-common-1.7.0.jar"/>
 	<classpathentry kind="lib" path="jgoodies-looks-2.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/jcardsim-2.2.2-all.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
